# PORR

./: CMakeLists.txt  Graph.cpp  Graph.h  README.md  main.cpp
hadoop/: build.gradle  deploy-to-hadoop.sh  settings.gradle
hadoop/src/main/java/com/porr/hadoop/: FriendsCount.java  FriendsCountSequential.java  WordCount.java
input/: dolphins.txt  emails_big.txt  karate.txt  list20k.txt
openmp/: Graph.cpp  Graph.h  main.cpp
openmp/input/: list128k.txt  list16k.txt  list256k.txt  list32k.txt  list64k.txt  new_emails_dnc.txt
